# etw

./: README.md
android-project/: AndroidManifest.xml  ant.properties
android-project/jni/: SDL_mixer
android-project/res/values/: strings.xml
branches/SDL12/etw/: CMakeLists.txt  Makefile.linux  goalkeeper.c  menu.c  myiff.c  os_control.c
branches/SDL12/etw/include/: eat.h  network.h  os_defs.h
branches/gg/etw/: Script1.rc  andrea.pbxuser  chunkyblitting.c  computer.c  cpu.c  etw_locale.c  font.c  intro.c  lists.c  os_video.c  portiere.c  replay.c  smakefile
branches/gg/server/: highsocket.h
branches/gg/web/: EatTheWhistle.doc.info  EatTheWhistle.txt  etwfaq.html
branches/ios_new_loop/data/: etw.cfg
branches/ios_new_loop/etw/: GameCenter.m  anim.c  config.c  connection.c  control.c  loops.c  menu.c  os_control.c  os_init.c  replay.c  teams.c  touch.cpp  utility.c  vjoy.cpp
branches/ios_new_loop/server/: etw.cfg  main.c
branches/ios_new_loop/web/: teams.html
branches/ios_new_loop/xcode-ios/: etw-Info.plist
branches/mobile_v1.0/etw/: Makefile.mos  anim.c  etw.nsi  font.c  human.c  intro.c  loops.c  replay.c  special.c  substitutions.c  teams.c  teamsetup.c  tutorial.cpp
branches/mobile_v1.0/translations/: deutsch.ct  etw_locale.cd  italiano.ct
data/: etw.cfg
data/catalogs/italiano/: etw.catalog
data/gfx/: etwmobile
data/newgfx/: game.font
etw/: Banner.m  CMakeLists.txt  GameCenter.m  Makefile  Makefile.autopackage  Makefile.linux  Makefile.mingw  Makefile.solaris_x86  Makefile.universal  Makefile.win32  Makefile.wince  SDLMain.m  SDL_android_main.cpp  Script1.rc  anim.c  arbitro.c  arcade.c  ball.c  bugs.txt  chunkyblitting.c  commento.c  computer.c  config.c  connection.c  control.c  cpu.c  crowd.c  data.c  display.c  etw.c  etw.nsi  etw_locale.c  font.c  freq.c  game.vcxproj  game.vcxproj.filters  generic_video.c  gfx.c  gfx.cpp  goalkeeper.c  (+37 more)
etw/autopackage/: default.apspec
etw/include/: GameCenter.h  anim.h  ball.h  chunky.h  defines.h  eat.h  etw_locale.h  externs.h  files.h  freq.h  gfx.h  highdirent.h  highsocket.h  macros.h  menu.h  menu_externs.h  my_protos.h  mydebug.h  myiff.h  mymacros.h  mytypes.h  network.h  os_defs.h  player.h  referee.h  sound.h  squadre.h  tactics.h  team.h  teamsetup.h  touch.h  tutorial.h  version.h
etw/insight/: CMakeLists.txt  db.h  gamestate.h  insight.cpp  insight.h
server/: ETWServer.dsw  server.h
tags/V3_3/etw/: Makefile  Makefile.linux  Makefile.mingw  arcade.c  bugs.txt  chunkyblitting.c  commento.c  crowd.c  data.c  display.c  etw.nsi  freq.c  human.c  intro.c  menu.c  menu_data.c  myiff.c  network.c  os_video.c  palla.c  radar.c  sound.c  specials.c  tables.c  utility.c  wc.c
tags/V3_6/data/: etw.cfg
tags/V3_6/etw/: arbitro.c
tags/V3_6/server/: Server.1  utility.h
tags/V4_0pre/etw/: Makefile.crossaros  ball.c  config.c  connection.c  crowd.c  etw_locale.c  highdirent.c  os_init.c  os_video.c  replay.c  teams.c  wc.c
tags/before_game_center_integration/data/: etw.cfg
tags/before_game_center_integration/etw/: CMakeLists.txt  GameCenter.m  Makefile.mingw  Makefile.osx  chunkyblitting.c  commento.c  connection.c  generic_video.c  human.c  intro.c  loops.c  menu.c  menu_config.c  os_control.c  replay.c  sound.c  teams.c  teamsetup.c  touch.cpp  wc.c
tags/before_game_center_integration/server/: highsocket.c  server.c  utility.c
tags/before_game_center_integration/xcode-ios/: etw-Info.plist
tags/before_iad/android-project/: AndroidManifest.xml  ant.properties
tags/before_iad/data/: etw.cfg
tags/before_iad/etw/: Banner.m  CMakeLists.txt  Makefile.aros  SDL_android_main.cpp  config.c  connection.c  control.c  cpu.c  crowd.c  etw.c  highsocket.c  human.c  loops.c  main.c  menu.c  menu_font.c  os_control.c  os_init.c  os_video.c  special.c  touch.cpp  vjoy.cpp  wc.c
tags/before_iad/tools/: pgm2font.c
tags/before_iad/translations/: italiano.ct
tags/before_iad/xcode-ios/: etw-Info.plist
tags/change_sound_system/etw/: Makefile.linux  Makefile.osx  config.c  dati_vel.c  freq.c  game.dsp  generic_video.c  intro.c  league.c  loops.c  menu.c  menu_config.c  menu_font.c  os_control.c  palla.c  project.pbxproj  teams.c
tags/ios_v1_2/etw/: CMakeLists.txt  FileReq.m  GameCenter.m  Makefile  anim.c  commento.c  control.c  data.c  (+28 more)
tools/: CMakeLists.txt  Info.plist.in  editor.cpp  gui.xml  rncdecode.cpp  swos2etw.c  swos2etw.h
tools/oogtk/: oogdk.h  oomutex.h  ooobj.h  oothread.h  ootree.h
translations/: empty.ct  etw_locale.cd  find_strings.cpp  italiano.ct  localization.txt
trunk/android-project/: AndroidManifest.xml  local.properties
trunk/data/: etw.cfg
trunk/etw/: Android.mk  Banner.m  CMakeLists.txt  ETW.rc  ETW.sln  FileReq.m  GameCenter.h  GameCenter.m  Makefile  Makefile.aros  Makefile.linux  Makefile.mingw  Makefile.osx  Makefile.universal  Makefile.win32  Makefile.wince  README.developers  SDLMain.m  SDL_android_main.cpp  anim.c  arbitro.c  arcade.c  ball.c  bugs.txt  chunkyblitting.c  commento.c  computer.c  config.c  connection.c  control.c  crowd.c  data.c  display.c  etw.c  etw.icns  etw_locale.c  font.c  freq.c  game.vcxproj  game.vcxproj.filters  (+40 more)
trunk/etw/autopackage/: default.apspec
trunk/etw/include/: GameCenter.h  anim.h  ball.h  chunky.h  control_types.h  defines.h  eat.h  etw_locale.h  externs.h  files.h  freq.h  gfx.h  highdirent.h  highsocket.h  lists.h  macros.h  menu.h  menu_externs.h  mydebug.h  myiff.h  mytypes.h  network.h  os_defs.h  preinclude.h  sound.h  squadre.h  structs.h  tactics.h  team.h  touch.h  tutorial.h  version.h
trunk/server/: ETWServer.dsp
trunk/tools/: bmp2gfx.c  editor.cpp  files.h  find_strings.cpp  font2pgm.c  gfx2bmp.c  pgm2font.c  swos2etw.c
trunk/translations/: deutsch.ct  italiano.ct  localization.txt
trunk/web/: index.html
trunk/xcode-ios/: etw-Info.plist
trunk/xcode-ios-free/: etw-Info.plist
web/: index.html
web/teams/: austria.lha  spain.lha  usa.lha
xcode-ios/: Launch Screen.storyboard  etw-Info.plist
xcode-ios-free/etwfree.xcodeproj/: project.pbxproj
xcode-ios/etw.xcodeproj/: project.pbxproj
(+152 files in other folders)
